--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
+        <div id="calculator-container">
+            <div id="display"><p>DUMMY</p></div>
+            <button id="zero" class="number" value="0">0</button>
+            <button id="one" class="number" value="1">1</button>
+            <button id="two" class="number" value="2">2</button>
+            <button id="three" class="number" value="3">3</button>
+            <button id="four" class="number" value="4">4</button>
+            <button id="five" class="number" value="5">5</button>
+            <button id="six" class="number" value="6">6</button>
+            <button id="seven" class="number" value="7">7</button>
+            <button id="eight" class="number" value="8">8</button>
+            <button id="nine" class="number" value="9">9</button>
+            <button id="equals" value="equals">=</button>
+            <button id="clear" value="clear">AC</button>
+        </div>
         <script src="styles/style.css"></script>
     </body>
 </html>
