added extra functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div id="calculator-container">
-            <div id="display"><p id="value">0</p></div>
+            <div id="display-container">
+                <div id="main-display"><p id="value">0</p></div>
+            </div>
             <div id="button-container">
                 <button id="all-clear">AC</button>
                 <button id="zero" class="number" value="0">0</button>
