--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <div id="calculator-container">
             <div id="display-container">
                 <div id="main-display"><p id="value">0</p></div>
+                <button id="backspace" value="backspace">X</button>
             </div>
             <div id="button-container">
                 <button id="all-clear">AC</button>
+                <button id="decimal" class="number" value=".">.</button>
                 <button id="zero" class="number" value="0">0</button>
                 <button id="one" class="number" value="1">1</button>
                 <button id="two" class="number" value="2">2</button>
@@ -22,10 +24,10 @@
                 <button id="seven" class="number" value="7">7</button>
                 <button id="eight" class="number" value="8">8</button>
                 <button id="nine" class="number" value="9">9</button>
-                <button id="add" class="operator" value="add">+</button>
-                <button id="subtract" class="operator" value="subtract">-</button>
-                <button id="multiply" class="operator" value="multiply">*</button>
-                <button id="divide" class="operator" value="divide">/</button>
+                <button id="add" class="operator" value="+">+</button>
+                <button id="subtract" class="operator" value="-">-</button>
+                <button id="multiply" class="operator" value="*">*</button>
+                <button id="divide" class="operator" value="/">/</button>
                 <button id="equals" value="equals">=</button>
                 <button id="clear">C</button>
             </div>
