--- a/index.html
+++ b/index.html
@@ -4,34 +4,43 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
     </head>
     <body>
+        <header>
+            <h1>ONLINE CALCULATOR</h1>
+        </header>
         <div id="calculator-container">
             <div id="display-container">
                 <div id="main-display"><p id="value">0</p></div>
-                <button id="backspace" value="backspace">X</button>
+                <button id="backspace" class="temp-click" value="backspace">X</button>
             </div>
             <div id="button-container">
-                <button id="all-clear">AC</button>
-                <button id="decimal" class="number" value=".">.</button>
-                <button id="zero" class="number" value="0">0</button>
-                <button id="one" class="number" value="1">1</button>
-                <button id="two" class="number" value="2">2</button>
-                <button id="three" class="number" value="3">3</button>
-                <button id="four" class="number" value="4">4</button>
-                <button id="five" class="number" value="5">5</button>
-                <button id="six" class="number" value="6">6</button>
-                <button id="seven" class="number" value="7">7</button>
-                <button id="eight" class="number" value="8">8</button>
-                <button id="nine" class="number" value="9">9</button>
+                <button id="all-clear" class="temp-click">AC</button>
+                <button id="decimal" class="number temp-click" value=".">.</button>
+                <button id="plus-minus" class="temp-click" value="+/-">+/-</button>
+                <button id="zero" class="number temp-click" value="0">0</button>
+                <button id="one" class="number temp-click" value="1">1</button>
+                <button id="two" class="number temp-click" value="2">2</button>
+                <button id="three" class="number temp-click" value="3">3</button>
+                <button id="four" class="number temp-click" value="4">4</button>
+                <button id="five" class="number temp-click" value="5">5</button>
+                <button id="six" class="number temp-click" value="6">6</button>
+                <button id="seven" class="number temp-click" value="7">7</button>
+                <button id="eight" class="number temp-click" value="8">8</button>
+                <button id="nine" class="number temp-click" value="9">9</button>
                 <button id="add" class="operator" value="+">+</button>
                 <button id="subtract" class="operator" value="-">-</button>
                 <button id="multiply" class="operator" value="*">*</button>
                 <button id="divide" class="operator" value="/">/</button>
-                <button id="equals" value="equals">=</button>
-                <button id="clear">C</button>
+                <button id="equals" class="temp-click" value="equals">=</button>
+                <button id="clear" class="temp-click">C</button>
             </div>
         </div>
+        <footer>
+            <p>&#169; 2020 Ryan Kim</p>
+        </footer>
         <script src="scripts/script.js"></script>
     </body>
 </html>
